# yesvus-blog-be

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  media.py  posts.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  post.py  user.py
app/schemas/: __init__.py  auth.py  media.py  post.py
app/services/: __init__.py  media.py
infra/: README.md
infra/envs/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/envs/prod/: main.tf  terraform.tfvars.example  variables.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/ecs_service/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
infra/modules/rds_postgres/: main.tf  outputs.tf  variables.tf
infra/modules/storage_cdn/: main.tf  outputs.tf  variables.tf
migrations/: README  env.py
migrations/versions/: 20260228_0001_init.py  20260228_0002_add_post_images.py
scripts/: smoke_test.sh
tests/: test_media.py  test_post_schemas.py
