[project]
name = "yesvus-blog-be"
version = "0.1.0"
description = "Production-ready FastAPI blog backend"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy==2.0.43",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "alembic==1.16.5",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.20",
    "email-validator==2.2.0",
    "boto3==1.35.52",
]

[dependency-groups]
dev = [
    "pytest==8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
